--- a/pages/19614.html
+++ b/pages/19614.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      spacetime in nLab
+      piecewise flat spacetime in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      spacetime
+      piecewise flat spacetime
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/6260/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8882/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -544,174 +544,45 @@ margin-left: 0em;
 <div class='maruku_toc'>
 <ul>
 <li><a href='#idea'>Idea</a></li>
-<ul>
-<li><a href='#general'>General</a></li>
-<li><a href='#intermingling_of_space_and_time'>Intermingling of space and time</a></li>
-</ul>
-<li><a href='#examples'>Examples</a></li>
-<li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
-<ul>
-<li><a href='#books'>Books</a></li>
-<li><a href='#articles'>Articles</a></li>
-</ul>
 </ul>
 </div>
 
 <h2 id='idea'>Idea</h2>
 
-<h3 id='general'>General</h3>
+<p>If one allows <a class='existingWikiWord' href='/nlab/show/pseudo-Riemannian+manifolds'>pseudo-Riemannian manifolds</a> with <a class='existingWikiWord' href='/nlab/show/conical+singularities'>conical singularities</a> then it makes sense to ask for <a class='existingWikiWord' href='/nlab/show/spacetimes'>spacetimes</a> which are flat (<a class='existingWikiWord' href='/nlab/show/isometry'>isometric</a> to pieces of <a class='existingWikiWord' href='/nlab/show/Minkowski+spacetime'>Minkowski spacetime</a>) away from <a class='existingWikiWord' href='/nlab/show/stratified+space'>strata</a> of <a class='existingWikiWord' href='/nlab/show/positive+number'>positive</a> <a class='existingWikiWord' href='/nlab/show/codimension'>codimension</a>, with all <a class='existingWikiWord' href='/nlab/show/curvature'>curvature</a> concentrated in <a class='existingWikiWord' href='/nlab/show/conical+singularities'>conical singularities</a> on these lower-dimensional strata.</p>
 
-<p>A <em>spacetime</em> is a <a class='existingWikiWord' href='/nlab/show/manifold'>manifold</a> that models <a class='existingWikiWord' href='/nlab/show/space'>space</a> and <a class='existingWikiWord' href='/nlab/show/time'>time</a> in <a class='existingWikiWord' href='/nlab/show/physics'>physics</a>.</p>
+<p>Such piecewise flat spacetimes have been considered as discretized models for smooth (non-singular and non-piecewise flat) <a class='existingWikiWord' href='/nlab/show/spacetimes'>spacetimes</a> useful for <a class='existingWikiWord' href='/nlab/show/computation'>computation</a>. A <a class='existingWikiWord' href='/nlab/show/combinatorics'>combinatorial</a> <a class='existingWikiWord' href='/nlab/show/functional'>functional</a> on piecewise flat spacetimes, depending on the <a class='existingWikiWord' href='/nlab/show/edge'>edge</a> <a class='existingWikiWord' href='/nlab/show/lengths'>lengths</a> of a metric <a class='existingWikiWord' href='/nlab/show/simplicial+complex'>simplicial complex</a>, was introduced in Regge… with the idea that in an appropriate <a class='existingWikiWord' href='/nlab/show/limit+of+a+sequence'>limit</a> it approaches the <a class='existingWikiWord' href='/nlab/show/Einstein-Hilbert+action'>Einstein-Hilbert action</a> <a class='existingWikiWord' href='/nlab/show/functional'>functional</a> on non-singular <a class='existingWikiWord' href='/nlab/show/spacetimes'>spacetimes</a>. That this <a class='existingWikiWord' href='/nlab/show/limit+of+a+sequence'>limit</a> indeed works out has been proven in…</p>
 
-<p>This is formalized by saying that a <strong>spacetime</strong> is a <a class='existingWikiWord' href='/nlab/show/smooth+Lorentzian+space'>smooth Lorentzian space</a> <math class='maruku-mathml' display='inline' id='mathml_4ed906294e505ea46620c028b957c5d416fdc646_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>μ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(X,\mu)</annotation></semantics></math> equipped with a <a class='existingWikiWord' href='/nlab/show/time+orientation'>time orientation</a> (see there).</p>
+<p>The conjecture that thus physical <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> might <em>fundamentally</em> be piecewise flat, with <a class='existingWikiWord' href='/nlab/show/matter'>matter</a> concentrated at <a class='existingWikiWord' href='/nlab/show/string'>string</a>-shaped <a class='existingWikiWord' href='/nlab/show/conical+singularities'>conical singularities</a> has been put forward in t’Hooft… and worked out in some detail by <a href='#vandeMeent11'>van de Meent 11</a></p>
 
-<p>Hence a point in a spacetime is called an <em><a class='existingWikiWord' href='/nlab/show/event'>event</a></em>.</p>
-
-<p>In the context of classical <a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a> a <strong>spacetime</strong> is usually in addition assumed to be connected and four-dimensional. A connected Lorentzian manifold is either time orientable or it has a two-sheeted covering which is time orientable.</p>
-
-<p>In <a class='existingWikiWord' href='/nlab/show/classical+physics'>classical physics</a>, notably in <a class='existingWikiWord' href='/nlab/show/special+relativity'>special relativity</a> and <a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a> points in <math class='maruku-mathml' display='inline' id='mathml_4ed906294e505ea46620c028b957c5d416fdc646_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> model coordinates where <em>events</em> can take place from the viewpoint of an observer (“points in space and time”) while the metric <math class='maruku-mathml' display='inline' id='mathml_4ed906294e505ea46620c028b957c5d416fdc646_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>μ</mi></mrow><annotation encoding='application/x-tex'>\mu</annotation></semantics></math> models the field of <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a> in <a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a>.</p>
-
-<h3 id='intermingling_of_space_and_time'>Intermingling of space and time</h3>
-
-<p>The noun “spacetime” is used in both <a class='existingWikiWord' href='/nlab/show/special+relativity'>special relativity</a> and <a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a>, but is best motivated from the viewpoint of <a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a>. <a class='existingWikiWord' href='/nlab/show/special+relativity'>Special relativity</a> deals with the <a class='existingWikiWord' href='/nlab/show/Minkowski+spacetime'>Minkowski spacetime</a> only. The <a class='existingWikiWord' href='/nlab/show/Minkowski+spacetime'>Minkowski spacetime</a> allows a <em>canonical</em> choice of <em>global</em> coordinates such that the metric tensor has in every point the form diag(-1, 1, 1, 1), which identifies the first coordinate as representing the time coordinate and the others as representing space coordinates.</p>
-
-<p>Given a general spacetime, there is not necessarily a globally defined coordinate system, and therefore not necessarily a globally defined <em>canonical</em> time coordinate. More specifically, there are spacetimes that admit coordinates defined on subsets where the <em>physical</em> interpretation of the coordinates as modelling time and space coordinates <em>changes</em> over the domain of definition.</p>
-
-<p>(TODO: references and explanations).</p>
-
-<h2 id='examples'>Examples</h2>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/Minkowski+spacetime'>Minkowski spacetime</a></li>
-</ul>
-<table><thead><tr><th><strong><a class='existingWikiWord' href='/nlab/show/black+hole'>black hole</a> <a class='existingWikiWord' href='/nlab/show/spacetimes'>spacetimes</a></strong></th><th>vanishing <a class='existingWikiWord' href='/nlab/show/angular+momentum'>angular momentum</a></th><th>positive <a class='existingWikiWord' href='/nlab/show/angular+momentum'>angular momentum</a></th></tr></thead><tbody><tr><td style='text-align: left;'><strong>vanishing <a class='existingWikiWord' href='/nlab/show/charge'>charge</a></strong></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Schwarzschild+spacetime'>Schwarzschild spacetime</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Kerr+spacetime'>Kerr spacetime</a></td></tr>
-<tr><td style='text-align: left;'><strong>positive <a class='existingWikiWord' href='/nlab/show/charge'>charge</a></strong></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Reissner-Nordstrom+spacetime'>Reissner-Nordstrom spacetime</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Kerr-Newman+spacetime'>Kerr-Newman spacetime</a></td></tr>
-</tbody></table>
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/asymptotically+flat+spacetime'>asymptotically flat spacetime</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/piecewise+flat+spacetime'>piecewise flat spacetime</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/gravitational+wave'>gravitational wave</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/anti+de+Sitter+spacetime'>anti de Sitter spacetime</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/FRW+spacetime'>FRW spacetime</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Taub-NUT+spacetime'>Taub-NUT spacetime</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Einstein+manifold'>Einstein manifold</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/pp-wave+spacetime'>pp-wave spacetime</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/KK-monopole'>KK-monopole</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Malament%E2%80%93Hogarth+spacetime'>Malament–Hogarth spacetime</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/super+spacetime'>super spacetime</a></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/super+Minkowski+spacetime'>super Minkowski spacetime</a></li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/black+brane'>black brane</a></p>
-</li>
-</ul>
-
-<h2 id='related_concepts'>Related concepts</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/universal+spacetime'>universal spacetime</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/general+covariance'>general covariance</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a>, <a class='existingWikiWord' href='/nlab/show/cosmology'>cosmology</a>, <a class='existingWikiWord' href='/nlab/show/black+hole'>black hole</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/particle+physics'>particle physics</a>, <a class='existingWikiWord' href='/nlab/show/matter'>matter</a>, <a class='existingWikiWord' href='/nlab/show/sigma-model'>sigma-model</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/force'>force</a>, <a class='existingWikiWord' href='/nlab/show/gauge+theory'>gauge theory</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/mass'>mass</a></p>
-</li>
-</ul>
+<p>Piecewise flat spacetimes appear naturally in <a class='existingWikiWord' href='/nlab/show/3d+quantum+gravity'>3-dimensional gravity</a> and also as the “<a class='existingWikiWord' href='/nlab/show/far-horizon+geometry'>far-horizon geometry</a>” (see there) of <a class='existingWikiWord' href='/nlab/show/BPS+state'>BPS</a> <a class='existingWikiWord' href='/nlab/show/black+brane'>black brane</a> spacetimes in <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> theories, where considerations such as at <em><a class='existingWikiWord' href='/nlab/show/M-theory+on+G2-manifolds'>M-theory on G2-manifolds</a></em> suggest that the <a class='existingWikiWord' href='/nlab/show/conical+singularities'>conical singularities</a> have to be taken seriously as part of the physical model.</p>
 
 <h2 id='references'>References</h2>
 
-<h3 id='books'>Books</h3>
-
 <ul>
-<li>S. W. Hawking, G. F. R. Ellis, <em>The large scale structure of space-time</em>, Cambridge Univ. Press</li>
-
-<li>John Beem, Paul Ehrlich, <em>Global Lorentzian geometry</em>, Marcel Dekker 1981 (and Russian, updated translation, Mir 1985)</li>
+<li id='vandeMeent11'><a class='existingWikiWord' href='/nlab/show/Maarten+van+de+Meent'>Maarten van de Meent</a>, <em>Piecewise Flat Gravity in 3+1 dimensions</em> (<a href='https://arxiv.org/abs/1111.6468'>arXiv:1111.6468</a>)</li>
 </ul>
-
-<h3 id='articles'>Articles</h3>
-
-<ul>
-<li>
-<p>L. Markus, <em>Line element fields and Lorentz structures on differentiable manifolds</em>, Ann. of Math. (2) 62 (1955), 411–417, <a href='http://www.ams.org/mathscinet-getitem?mr=0073169'>MR0073169</a> <a href='http://www.jstor.org/stable/1970071'>jstor</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Roger+Penrose'>Roger Penrose</a>, <em>Gravitational collapse and space-time singularities</em>, Phys. Rev. Lett. <strong>14</strong>, 57–59</p>
-</li>
-</ul>
-<div class='property'>category: <a class='category_link' href='/nlab/all_pages/physics'>physics</a><a class='category_link' href='/nlab/all_pages/geometry'>geometry</a></div>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on August 24, 2018 at 13:48:11.
-  See the <a href="https://ncatlab.org/nlab/history/spacetime" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on August 24, 2018 at 13:51:21.
+  See the <a href="https://ncatlab.org/nlab/history/piecewise flat spacetime" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/spacetime" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/spacetime/35" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(35 revisions)</span> | <a href="/nlab/show/diff/spacetime" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/spacetime" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/spacetime/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/piecewise+flat+spacetime" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/piecewise flat spacetime/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/spacetime" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/piecewise+flat+spacetime" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/spacetime" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/piecewise+flat+spacetime" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/spacetime" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/piecewise+flat+spacetime" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
