--- a/pages/19615.html
+++ b/pages/19615.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      stratification in nLab
+      Maarten van de Meent in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      stratification
+      Maarten van de Meent
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8883/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -308,49 +308,36 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'>
-<ul>
-<li><a href='#idea'>Idea</a></li>
-<li><a href='#related_concepts'>Related concepts</a></li>
+      <ul>
+<li><a href='https://www.aei.mpg.de/person/52146/1589487'>webpage</a></li>
 </ul>
-</div>
 
-<h2 id='idea'>Idea</h2>
-
-<p>A <em>stratification</em> of a <a class='existingWikiWord' href='/nlab/show/set'>set</a> or other object is some kind of decomposition into <em>strata</em> that are <a class='existingWikiWord' href='/nlab/show/order'>ordered</a> by inclusion.</p>
-
-<h2 id='related_concepts'>Related concepts</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_9bf3333fa4c3334013e0331feeb5833230419dfc_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/filtered+object'>filtered object</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/stratified+space'>stratified space</a></p>
-</li>
+<li><a class='existingWikiWord' href='/nlab/show/piecewise+flat+spacetime'>piecewise flat spacetime</a></li>
 </ul>
+<div class='property'>category: <a class='category_link' href='/nlab/all_pages/people'>people</a></div>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on August 24, 2018 at 13:47:06.
-  See the <a href="https://ncatlab.org/nlab/history/stratification" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on August 24, 2018 at 13:53:06.
+  See the <a href="https://ncatlab.org/nlab/history/Maarten van de Meent" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/stratification" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stratification/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/stratification" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stratification" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/stratification/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Maarten+van+de+Meent" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Maarten van de Meent/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/stratification" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Maarten+van+de+Meent" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/stratification" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Maarten+van+de+Meent" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/stratification" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Maarten+van+de+Meent" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
