--- a/pages/19614.html
+++ b/pages/19614.html
@@ -546,7 +546,7 @@ margin-left: 0em;
 <li><a href='#idea'>Idea</a></li>
 <li><a href='#references'>References</a></li>
 <ul>
-<li><a href='#regge_calculuc'>Regge calculuc</a></li>
+<li><a href='#regge_calculus'>Regge calculus</a></li>
 <li><a href='#t_hooftvan_de_meent'>‘t Hooft-van de Meent</a></li>
 </ul>
 </ul>
@@ -555,7 +555,9 @@ margin-left: 0em;
 <h2 id='idea'>Idea</h2>
 
 <p>If one allows <a class='existingWikiWord' href='/nlab/show/pseudo-Riemannian+manifolds'>pseudo-Riemannian manifolds</a> with <a class='existingWikiWord' href='/nlab/show/conical+singularities'>conical singularities</a> then it makes sense to ask for <a class='existingWikiWord' href='/nlab/show/spacetimes'>spacetimes</a> which are flat (<a class='existingWikiWord' href='/nlab/show/isometry'>isometric</a> to pieces of <a class='existingWikiWord' href='/nlab/show/Minkowski+spacetime'>Minkowski spacetime</a>) away from <a class='existingWikiWord' href='/nlab/show/stratified+space'>strata</a> of <a class='existingWikiWord' href='/nlab/show/positive+number'>positive</a> <a class='existingWikiWord' href='/nlab/show/codimension'>codimension</a>, with all <a class='existingWikiWord' href='/nlab/show/curvature'>curvature</a> concentrated in <a class='existingWikiWord' href='/nlab/show/conical+singularities'>conical singularities</a> on these lower-dimensional strata.</p>
-
+<center>
+<img src='https://ncatlab.org/nlab/files/ConicalSingularity.jpg' width='300'/>
+</center>
 <p>Such piecewise flat spacetimes have been considered as discretized models for smooth (non-singular and non-piecewise flat) <a class='existingWikiWord' href='/nlab/show/spacetimes'>spacetimes</a> useful for <a class='existingWikiWord' href='/nlab/show/computation'>computation</a>. A <a class='existingWikiWord' href='/nlab/show/combinatorics'>combinatorial</a> <a class='existingWikiWord' href='/nlab/show/functional'>functional</a> on piecewise flat spacetimes, depending on the <a class='existingWikiWord' href='/nlab/show/edge'>edge</a> <a class='existingWikiWord' href='/nlab/show/lengths'>lengths</a> of a metric <a class='existingWikiWord' href='/nlab/show/simplicial+complex'>simplicial complex</a>, was introduced in <a href='#Regge61'>Regge 61</a> (see also <a href='#Barrett87'>Barrett 87</a>) with the idea that in an appropriate <a class='existingWikiWord' href='/nlab/show/limit+of+a+sequence'>limit</a> it approaches the <a class='existingWikiWord' href='/nlab/show/Einstein-Hilbert+action'>Einstein-Hilbert action</a> <a class='existingWikiWord' href='/nlab/show/functional'>functional</a> on non-singular <a class='existingWikiWord' href='/nlab/show/spacetimes'>spacetimes</a>. This has become famous as <em>Regge calculus</em>. That this <a class='existingWikiWord' href='/nlab/show/limit+of+a+sequence'>limit</a> indeed works out has been proven (only) in <a href='#CheegerMuellerSchrader84'>Cheeger-Mueller-Schrader 84</a>, see <a href='#Cheeger16'>Cheeger 16</a> for review.</p>
 
 <p>The conjecture that thus the <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> of the <a class='existingWikiWord' href='/nlab/show/observable+universe'>observable universe</a> might <em>fundamentally</em> be piecewise flat on microscopic scales, with fundamental <a class='existingWikiWord' href='/nlab/show/matter'>matter</a> concentrated at <a class='existingWikiWord' href='/nlab/show/string'>string</a>-shaped <a class='existingWikiWord' href='/nlab/show/conical+singularities'>conical singularities</a> has been put forward in <a href='#tHooft08'>‘t Hooft 08</a> and worked out in some detail by <a href='#vandeMeent11'>van de Meent 11</a></p>
@@ -564,7 +566,7 @@ margin-left: 0em;
 
 <h2 id='references'>References</h2>
 
-<h3 id='regge_calculuc'>Regge calculuc</h3>
+<h3 id='regge_calculus'>Regge calculus</h3>
 
 <ul>
 <li id='Regge61'>
@@ -613,14 +615,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on August 24, 2018 at 14:14:34.
+  Last revised on August 25, 2018 at 13:56:41.
   See the <a href="https://ncatlab.org/nlab/history/piecewise flat spacetime" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/piecewise+flat+spacetime" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/piecewise+flat+spacetime" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/piecewise+flat+spacetime/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/piecewise+flat+spacetime" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/piecewise+flat+spacetime" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/piecewise flat spacetime/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
