--- a/pages/19616.html
+++ b/pages/19616.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      combinatorics in nLab
+      combinatorics - contents in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      combinatorics
+      combinatorics - contents
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/1050/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8887/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -308,13 +308,17 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <div class='rightHandSide'>
-<div class='toc clickDown' tabindex='0'>
-<h3 id='context'>Context</h3>
+      <p><strong><a class='existingWikiWord' href='/nlab/show/combinatorics'>combinatorics</a></strong></p>
 
-<h4 id='combinatorics'>Combinatorics</h4>
+<p><a class='existingWikiWord' href='/nlab/show/enumerative+combinatorics'>enumerative combinatorics</a></p>
 
-<div class='hide'><p><strong><a class='existingWikiWord' href='/nlab/show/combinatorics'>combinatorics</a></strong></p><p><a class='existingWikiWord' href='/nlab/show/enumerative+combinatorics'>enumerative combinatorics</a></p><p><a class='existingWikiWord' href='/nlab/show/graph+theory'>graph theory</a></p><p><a class='existingWikiWord' href='/nlab/show/rewriting'>rewriting</a></p><h3 id='basic_structures'>Basic structures</h3><ul>
+<p><a class='existingWikiWord' href='/nlab/show/graph+theory'>graph theory</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/rewriting'>rewriting</a></p>
+
+<h3 id='basic_structures'>Basic structures</h3>
+
+<ul>
 <li><a class='existingWikiWord' href='/nlab/show/binary+linear+code'>binary linear code</a></li>
 
 <li><a class='existingWikiWord' href='/nlab/show/chord+diagram'>chord diagram</a></li>
@@ -330,13 +334,21 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/nlab/show/shuffle'>shuffle</a></li>
 
 <li><a class='existingWikiWord' href='/nlab/show/Young+diagram'>Young diagram</a></li>
-</ul><h3 id='generating_functions'>Generating functions</h3><ul>
+</ul>
+
+<h3 id='generating_functions'>Generating functions</h3>
+
+<ul>
 <li><a class='existingWikiWord' href='/nlab/show/combinatorial+species'>combinatorial species</a></li>
 
 <li><a class='existingWikiWord' href='/nlab/show/generating+function'>generating function</a></li>
 
 <li><a class='existingWikiWord' href='/nlab/show/power+series'>power series</a></li>
-</ul><h3 id='proof_techniques'>Proof techniques</h3><ul>
+</ul>
+
+<h3 id='proof_techniques'>Proof techniques</h3>
+
+<ul>
 <li><a class='existingWikiWord' href='/nlab/show/bijective+proof'>bijective proof</a></li>
 
 <li><a class='existingWikiWord' href='/nlab/show/Lagrange+inversion'>Lagrange inversion</a></li>
@@ -350,70 +362,41 @@ margin-left: 0em;
 </li>
 
 <li><a class='existingWikiWord' href='/nlab/show/P%C3%B3lya+enumeration+theorem'>Pólya enumeration theorem</a></li>
-</ul><h3 id='combinatorial_identities'>Combinatorial identities</h3><ul>
+</ul>
+
+<h3 id='combinatorial_identities'>Combinatorial identities</h3>
+
+<ul>
 <li><a class='existingWikiWord' href='/nlab/show/binomial+theorem'>binomial theorem</a></li>
 
 <li><a class='existingWikiWord' href='/nlab/show/Chu%E2%80%93Vandermonde+identity'>Chu–Vandermonde identity</a></li>
-</ul><h3 id='polytopes'>Polytopes</h3><ul>
+</ul>
+
+<h3 id='polytopes'>Polytopes</h3>
+
+<ul>
 <li><a class='existingWikiWord' href='/nlab/show/associahedron'>associahedron</a></li>
-</ul></div>
-</div>
-</div>
-
-<p><strong>Combinatorics</strong> is a subfield of <a class='existingWikiWord' href='/nlab/show/discrete+mathematics'>discrete mathematics</a> whose main subject (defining its central subfield of <a class='existingWikiWord' href='/nlab/show/enumerative+combinatorics'>enumerative combinatorics</a>) is the study of cardinality of finite sets of data, which are described by elementary rules, and reducing the question of cardinality of more complicated data to simpler such “combinatorial” problems. The basic method of combinatorics is to find bijections between two sets of data defined in manifestly different way, and in particular to find the bijections between the sets of more complicated and less explicit origin, with the sets whose definition and structure is more explicit, and considered more manageable (by already known “combinatorial” means). For example, a typical bijection the isomorphisms classes of <a class='existingWikiWord' href='/nlab/show/representation'>representation</a>s of some object (e.g. of a group) and “combinatorial” data like <a class='existingWikiWord' href='/nlab/show/Young+tableaux'>Young tableaux</a>, graphs of some kind and so on (this comprises <a class='existingWikiWord' href='/nlab/show/combinatorial+representation+theory'>combinatorial representation theory</a>).</p>
-
-<p>More widely, combinatorics is also studying various <em>deterministic</em> algorithms on finite sets with structure, involving counting, coloring and simple-minded elementary steps/decisions. When studying some other structure, which is not necessarily a finite structure, one can use “combinatorial arguments’ at some step, or develop a construction which is partly combinatorial. Some subclasses of examples of structures in mathematics are fully combinatorial in their nature. For example, there are so called <strong>combinatorial games</strong> in <a class='existingWikiWord' href='/nlab/show/game+theory'>game theory</a>.</p>
-
-<p>Some of the questions in <a class='existingWikiWord' href='/nlab/show/set+theory'>set</a> and <a class='existingWikiWord' href='/nlab/show/model+theory'>model theory</a> concerning the fine questions on cardinality of infinite sets (and their independence from various axioms in <a class='existingWikiWord' href='/nlab/show/set+theory'>set theory</a>) are often called the “infinitary combinatorics”.</p>
-
-<p>A person doing combinatorics is usually called a <strong>combinatorialist</strong>. See also <a href='http://en.wikipedia.org/wiki/Combinatorics'>wikipedia</a>.</p>
-
-<p>Entries on combinatorics and on various combinatorial objects in <math class='maruku-mathml' display='inline' id='mathml_253d8424091ffe84483747a2d08b3ee35132ba36_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab include:</p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/graph'>graph</a>, <a class='existingWikiWord' href='/nlab/show/quiver'>quiver</a></li>
-
-<li><a class='existingWikiWord' href='/nlab/show/matroid'>matroid</a>, <a class='existingWikiWord' href='/nlab/show/oriented+matroid'>oriented matroid</a></li>
-
-<li><a class='existingWikiWord' href='/nlab/show/permutation'>permutation</a></li>
-
-<li><a class='existingWikiWord' href='/nlab/show/symmetric+function'>symmetric function</a>, <a class='existingWikiWord' href='/nlab/show/noncommutative+symmetric+function'>noncommutative symmetric function</a></li>
-
-<li><a class='existingWikiWord' href='/nlab/show/Schur+functor'>Schur functor</a>, <a class='existingWikiWord' href='/nlab/show/Schur+function'>Schur function</a>, <a class='existingWikiWord' href='/nlab/show/plethysm'>plethysm</a></li>
-
-<li>(combinatorial) <a class='existingWikiWord' href='/nlab/show/species'>species</a></li>
-
-<li><a class='existingWikiWord' href='/nlab/show/game+theory'>game theory</a></li>
-
-<li><a class='existingWikiWord' href='/nlab/show/combinatorial+representation+theory'>combinatorial representation theory</a></li>
 </ul>
-
-<h2 id='references'>References</h2>
-
-<ul>
-<li>Richard P. Stanley, <em>Enumerative combinatorics</em>, vol.1 (<a href='http://www-math.mit.edu/~rstan/ec/ec1.pdf'>pdf</a>)</li>
-</ul>
-<div class='property'>category: <a class='category_link' href='/nlab/all_pages/combinatorics'>combinatorics</a></div>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on August 26, 2018 at 07:56:20.
-  See the <a href="https://ncatlab.org/nlab/history/combinatorics" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on August 26, 2018 at 07:58:21.
+  See the <a href="https://ncatlab.org/nlab/history/combinatorics - contents" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/combinatorics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/combinatorics/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/combinatorics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/combinatorics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/combinatorics/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/combinatorics+-+contents" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/combinatorics - contents/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/combinatorics" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/combinatorics+-+contents" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/combinatorics" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/combinatorics+-+contents" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/combinatorics" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/combinatorics+-+contents" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
