--- a/pages/19616.html
+++ b/pages/19616.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8887/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8887/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -377,11 +377,14 @@ margin-left: 0em;
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/associahedron'>associahedron</a></li>
 </ul>
+
+<p><a href='http://ncatlab.org/nlab/edit/combinatorics+-+contents'>edit this sidebar</a></p>
+<div class='property'>category: <a class='category_link' href='/nlab/all_pages/combinatorics'>combinatorics</a></div>
 </div>
 
 <div class="revisedby">
   <p>
-  Created on August 26, 2018 at 07:58:21.
+  Created on August 26, 2018 at 08:04:49.
   See the <a href="https://ncatlab.org/nlab/history/combinatorics - contents" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
