--- a/pages/19617.html
+++ b/pages/19617.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      David Berman in nLab
+      Luigi Alfonsi in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      David Berman
+      Luigi Alfonsi
   </h1>
 
 
@@ -294,7 +294,8 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8888/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://ncatlab.org/nlab/author/Luigi%20Alfonsi" title="Overview of nLab pages which Luigi Alfonsi has edited" style="color: black">Pages contributed to</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -308,48 +309,36 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <p>David Berman is professor in theoretical <a class='existingWikiWord' href='/nlab/show/physics'>physics</a> at Queen Mary University of London.</p>
-
-<ul>
-<li><a href='http://www.strings.ph.qmul.ac.uk/~dsb/'>webpage</a></li>
+      <ul>
+<li><a href='https://uk.linkedin.com/in/alfonsiluigi'>webpage</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_441dd0b6e6f1759bf324f88851bc992574d98f31_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_43d58a130f8ef004d2ad5b0529b6f9865e6654a4_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/double+field+theory'>double field theory</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/exceptional+generalized+geometry'>exceptional generalized geometry</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/confinement'>confinement</a> in <a class='existingWikiWord' href='/nlab/show/AdS-CFT'>AdS-CFT</a> (<a class='existingWikiWord' href='/nlab/show/string+theory+results+applied+elsewhere'>string theory results applied elsewhere</a>)</p>
-</li>
+<li><a class='existingWikiWord' href='/nlab/show/double+field+theory'>double field theory</a></li>
 </ul>
 <div class='property'>category: <a class='category_link' href='/nlab/all_pages/people'>people</a></div>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on August 26, 2018 at 09:03:42.
-  See the <a href="https://ncatlab.org/nlab/history/David Berman" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on August 26, 2018 at 09:01:27.
+  See the <a href="https://ncatlab.org/nlab/history/Luigi Alfonsi" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/David+Berman" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/David+Berman/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/David+Berman" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/David+Berman" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/David Berman/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Luigi+Alfonsi" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Luigi Alfonsi/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/David+Berman" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Luigi+Alfonsi" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/David+Berman" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Luigi+Alfonsi" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/David+Berman" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Luigi+Alfonsi" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
