--- a/pages/16656.html
+++ b/pages/16656.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -313,7 +313,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on August 26, 2018 at 10:54:09.
+  Last revised on August 26, 2018 at 11:00:23.
   See the <a href="https://ncatlab.org/nlab/history/irreducible element" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
