--- a/pages/19620.html
+++ b/pages/19620.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Curry&#39;s paradox in nLab
+      ex falso quodlibet in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Curry&#39;s paradox
+      ex falso quodlibet
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8891/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8896/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -308,41 +308,187 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <h2 id='idea'>Idea</h2>
+      <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
 
-<p>Curry’s paradox is a version of <a class='existingWikiWord' href='/nlab/show/Russell%27s+paradox'>Russell&#39;s paradox</a> that does not involve the use of <a class='existingWikiWord' href='/nlab/show/negation'>negation</a>.</p>
+<h4 id='foundations'>Foundations</h4>
 
-<p>Russell’s paradox is a proof of <a class='existingWikiWord' href='/nlab/show/falsehood'>falsehood</a>, rendering a certain class of formal systems (those including some kind of unlimited <a class='existingWikiWord' href='/nlab/show/axiom+of+comprehension'>axiom of comprehension</a>) “inconsistent” in the sense that they prove false, which by the law of <a class='existingWikiWord' href='/nlab/show/ex+falso+quodlibet'>ex falso quodlibet</a> entails that they prove anything at all. Curry’s paradox is a <em>direct</em> proof of “anything at all” without the detour through falsehood. Thus, it applies more generally than Russell’s paradox, e.g. to theories lacking a notion of “false”, or to <a class='existingWikiWord' href='/nlab/show/paraconsistent+logic'>paraconsistent</a> theories whose notion of “false” does not satisfy ex falso quodlibet.</p>
+<div class='hide'><p><strong><a class='existingWikiWord' href='/nlab/show/foundations'>foundations</a></strong></p><h2 id='the_basis_of_it_all'>The basis of it all</h2><ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/mathematical+logic'>mathematical logic</a></p>
+</li>
 
-<p>Curry’s paradox does, however, still depend on the structural rule of <a class='existingWikiWord' href='/nlab/show/contraction'>contraction</a>. Thus, it can be avoided by systems based on <a class='existingWikiWord' href='/nlab/show/linear+logic'>linear logic</a>.</p>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/first-order+logic'>first-order logic</a></p>
+</li>
 
-<h2 id='argument'>Argument</h2>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/type+theory'>type theory</a>, <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a></p>
+</li>
 
-<p>Let <math class='maruku-mathml' display='inline' id='mathml_9e62d2699c026c060bf39142b25d2ac01b11895a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>P</mi></mrow><annotation encoding='application/x-tex'>P</annotation></semantics></math> be any statement at all, and consider the set</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_9e62d2699c026c060bf39142b25d2ac01b11895a_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi><mo>=</mo><mo stretchy='false'>{</mo><mi>x</mi><mo lspace='mediummathspace' rspace='mediummathspace'>∣</mo><mo stretchy='false'>(</mo><mi>x</mi><mo>∈</mo><mi>x</mi><mo stretchy='false'>)</mo><mo>⇒</mo><mi>P</mi><mo stretchy='false'>}</mo><mo>.</mo></mrow><annotation encoding='application/x-tex'> C = \{ x \mid (x\in x) \Rightarrow P \}. </annotation></semantics></math></div>
-<p>Then if <math class='maruku-mathml' display='inline' id='mathml_9e62d2699c026c060bf39142b25d2ac01b11895a_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi><mo>∈</mo><mi>C</mi></mrow><annotation encoding='application/x-tex'>C\in C</annotation></semantics></math>, by definition we have <math class='maruku-mathml' display='inline' id='mathml_9e62d2699c026c060bf39142b25d2ac01b11895a_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>C</mi><mo>∈</mo><mi>C</mi><mo stretchy='false'>)</mo><mo>⇒</mo><mi>P</mi></mrow><annotation encoding='application/x-tex'>(C\in C) \Rightarrow P</annotation></semantics></math>, and hence by <a class='existingWikiWord' href='/nlab/show/modus+ponens'>modus ponens</a> we have <math class='maruku-mathml' display='inline' id='mathml_9e62d2699c026c060bf39142b25d2ac01b11895a_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>P</mi></mrow><annotation encoding='application/x-tex'>P</annotation></semantics></math>. Therefore, <math class='maruku-mathml' display='inline' id='mathml_9e62d2699c026c060bf39142b25d2ac01b11895a_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>C</mi><mo>∈</mo><mi>C</mi><mo stretchy='false'>)</mo><mo>⇒</mo><mi>P</mi></mrow><annotation encoding='application/x-tex'>(C\in C) \Rightarrow P</annotation></semantics></math>. But by definition this means that <math class='maruku-mathml' display='inline' id='mathml_9e62d2699c026c060bf39142b25d2ac01b11895a_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi><mo>∈</mo><mi>C</mi></mrow><annotation encoding='application/x-tex'>C\in C</annotation></semantics></math>, and therefore (as we just proved) <math class='maruku-mathml' display='inline' id='mathml_9e62d2699c026c060bf39142b25d2ac01b11895a_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>P</mi></mrow><annotation encoding='application/x-tex'>P</annotation></semantics></math>.</p>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/set+theory'>set theory</a></p>
 
-<p>Note that, if <a class='existingWikiWord' href='/nlab/show/negation'>negation</a> is defined as <math class='maruku-mathml' display='inline' id='mathml_9e62d2699c026c060bf39142b25d2ac01b11895a_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>¬</mo><mi>P</mi><mo>=</mo><mo stretchy='false'>(</mo><mi>P</mi><mo>⇒</mo><mo>⊥</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\neg P = (P \Rightarrow \bot)</annotation></semantics></math> for some notion of <a class='existingWikiWord' href='/nlab/show/falsehood'>falsehood</a> <math class='maruku-mathml' display='inline' id='mathml_9e62d2699c026c060bf39142b25d2ac01b11895a_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊥</mo></mrow><annotation encoding='application/x-tex'>\bot</annotation></semantics></math>, then Russell’s paradox is the special case of Curry’s paradox for <math class='maruku-mathml' display='inline' id='mathml_9e62d2699c026c060bf39142b25d2ac01b11895a_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>P</mi><mo>=</mo><mo>⊥</mo></mrow><annotation encoding='application/x-tex'>P=\bot</annotation></semantics></math>.</p>
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/material+set+theory'>material set theory</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/ZFC'>ZFC</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/ZFA'>ZFA</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/structural+set+theory'>structural set theory</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/ETCS'>ETCS</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/SEAR'>SEAR</a></li>
+</ul>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/universe'>universe</a></p>
+</li>
+</ul><h2 id='foundational_axioms'>Foundational axioms</h2><p><strong><a class='existingWikiWord' href='/nlab/show/foundational+axiom'>foundational axiom</a></strong></p><ul></ul><li>
+<p>basic constructions:</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/axiom+of+cartesian+products'>axiom of cartesian products</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/axiom+of+disjoint+unions'>axiom of disjoint unions</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/axiom+of+the+empty+set'>axiom of the empty set</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/axiom+of+fullness'>axiom of fullness</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/axiom+of+function+sets'>axiom of function sets</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/axiom+of+power+sets'>axiom of power sets</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/axiom+of+quotient+sets'>axiom of quotient sets</a></li>
+</ul>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/material+set+theory'>material axioms</a>:</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/axiom+of+extensionality'>axiom of extensionality</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/axiom+of+foundation'>axiom of foundation</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/Mostowski%27s+axiom'>Mostowski&#39;s axiom</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/axiom+of+pairing'>axiom of pairing</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/axiom+of+transitive+closure'>axiom of transitive closure</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/axiom+of+union'>axiom of union</a></li>
+</ul>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/axioms+of+choice'>axioms of choice</a>:</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/axiom+of+choice'>axiom of choice</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/axiom+of+countable+choice'>axiom of countable choice</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/axiom+of+dependent+choice'>axiom of dependent choice</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/axiom+of+excluded+middle'>axiom of excluded middle</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/axiom+of+existence'>axiom of existence</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/axiom+of+multiple+choice'>axiom of multiple choice</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/Markov%27s+axiom'>Markov&#39;s axiom</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/presentation+axiom'>presentation axiom</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/small+cardinality+selection+axiom'>small cardinality selection axiom</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/axiom+of+small+violations+of+choice'>axiom of small violations of choice</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/axiom+of+weakly+initial+sets+of+covers'>axiom of weakly initial sets of covers</a></li>
+</ul>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/Whitehead%27s+principle'>Whitehead&#39;s principle</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/large+cardinal+axioms'>large cardinal axioms</a>:</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/axiom+of+infinity'>axiom of infinity</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/axiom+of+universes'>axiom of universes</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/regular+extension+axiom'>regular extension axiom</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/inaccessible+cardinal'>inaccessible cardinal</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/measurable+cardinal'>measurable cardinal</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/elementary+embedding'>elementary embedding</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/supercompact+cardinal'>supercompact cardinal</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/Vop%C4%9Bnka%27s+principle'>Vopěnka&#39;s principle</a></li>
+</ul>
+</li><li>
+<p>strong axioms</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/axiom+of+separation'>axiom of separation</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/axiom+of+replacement'>axiom of replacement</a></li>
+</ul>
+</li><li>
+<p>further</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/reflection+principle'>reflection principle</a></li>
+</ul>
+</li><h2 id='removing_axioms'>Removing axioms</h2><ul>
+<li><a class='existingWikiWord' href='/nlab/show/constructive+mathematics'>constructive mathematics</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/predicative+mathematics'>predicative mathematics</a></li>
+</ul><div>
+<p>
+  <a href='/nlab/edit/foundations+-+contents'>Edit this sidebar</a>
+</p>
+</div></div>
+</div>
+</div>
+<div class='maruku_toc'>
+</div>
+
+<p><strong>Ex falso quodlibet</strong> is Latin for “from falsehood, anything”. It is also called the <strong>principle of explosion</strong>. In <a class='existingWikiWord' href='/nlab/show/logic'>logic</a> it refers to the principle that when a contradiction can be derived in a system, then any proposition follows. It holds in many logics, such as <a class='existingWikiWord' href='/nlab/show/classical+logic'>classical logic</a> and <a class='existingWikiWord' href='/nlab/show/intuitionistic+logic'>intuitionistic logic</a>, but it fails to hold in <a class='existingWikiWord' href='/nlab/show/paraconsistent+logic'>paraconsistent logic</a>, which was devised to allow controlled inconsistency.</p>
+
+<p>Variants of the principle’s name include <em>ex falso sequitur quodlibet</em>, “from falsehood, anything follows”, and <em>ex contradictione (sequitur) quodlibet</em>, “from contradiction, anything (follows)”).</p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on August 27, 2018 at 02:18:32.
-  See the <a href="https://ncatlab.org/nlab/history/Curry&#39;s paradox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on August 27, 2018 at 02:36:08.
+  See the <a href="https://ncatlab.org/nlab/history/ex falso quodlibet" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Curry%27s+paradox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Curry%27s+paradox/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Curry%27s+paradox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Curry%27s+paradox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Curry&#39;s paradox/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/ex+falso+quodlibet" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/ex falso quodlibet/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Curry%27s+paradox" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/ex+falso+quodlibet" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Curry%27s+paradox" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/ex+falso+quodlibet" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Curry%27s+paradox" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/ex+falso+quodlibet" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
