--- a/pages/1788.html
+++ b/pages/1788.html
@@ -306,8 +306,19 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <p>a &lt; b &lt; c</p>
+      <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_e2f706d335e2f021da9838d04ba4e07592af2fa5_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mo>(</mo><mi>diag</mi><mrow><mo>(</mo><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mstyle displaystyle='false'><mfrac><mn>1</mn><mn>3</mn></mfrac></mstyle></mrow></msup><mo>)</mo></mrow><mspace width='thickmathspace'></mspace><mo>,</mo><mspace width='thickmathspace'></mspace><munder><munder><mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>diag</mi><mrow><mo>(</mo><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mstyle displaystyle='false'><mfrac><mn>1</mn><mn>3</mn></mfrac></mstyle></mrow></msup><mo>)</mo></mrow></mrow><mo>⏟</mo></munder><mrow><mo>=</mo><mi>diag</mi><mrow><mo>(</mo><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mstyle displaystyle='false'><mfrac><mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow><mn>6</mn></mfrac></mstyle></mrow></msup><mo>)</mo></mrow></mrow></munder><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><msub><mstyle mathvariant='bold'><mn>1</mn></mstyle> <mn>2</mn></msub><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>,</mo><mspace width='thickmathspace'></mspace><mi>diag</mi><mrow><mo>(</mo><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mstyle displaystyle='false'><mfrac><mn>1</mn><mn>3</mn></mfrac></mstyle></mrow></msup><mo>)</mo></mrow><msub><mstyle mathvariant='bold'><mn>1</mn></mstyle> <mn>3</mn></msub><mo>)</mo></mrow></mrow><annotation encoding='application/x-tex'>
+  \left(
+    diag\left( e^{2\pi i \tfrac{1}{3}}  \right)\;,\;
+    \underset{ 
+      = diag\left( e^{2\pi i \tfrac{-1}{6}} \right)
+    }{
+    \underbrace{
+      -diag\left( e^{2\pi i \tfrac{1}{3}}  \right)
+    }} (-\mathbf{1}_2)\;,\;
+    diag\left( e^{2\pi i \tfrac{1}{3}}  \right) \mathbf{1}_3
+  \right)
 
+</annotation></semantics></math></div>
 <p><h1 id='section_table_of_contents'>Contents</h1>
 <div class='maruku_toc'>
 <ul>
@@ -342,14 +353,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on August 26, 2018 at 19:20:14.
+  Last revised on August 27, 2018 at 13:16:07.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1661" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1661 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1662" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1662 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
