--- a/pages/19616.html
+++ b/pages/19616.html
@@ -308,7 +308,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <p><strong><a class='existingWikiWord' href='/nlab/show/combinatorics'>combinatorics</a></strong></p>
+    <p><strong><a class='existingWikiWord' href='/nlab/show/combinatorics'>combinatorics</a></strong></p>
 
 <p><a class='existingWikiWord' href='/nlab/show/enumerative+combinatorics'>enumerative combinatorics</a></p>
 
@@ -325,13 +325,19 @@ margin-left: 0em;
 
 <li><a class='existingWikiWord' href='/nlab/show/combinatorial+design'>combinatorial design</a></li>
 
+<li><a class='existingWikiWord' href='/nlab/show/Latin+square'>Latin square</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/graph'>graph</a></li>
+
 <li><a class='existingWikiWord' href='/nlab/show/matroid'>matroid</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/partition'>partition</a></li>
 
 <li><a class='existingWikiWord' href='/nlab/show/permutation'>permutation</a></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/Latin+square'>Latin square</a></li>
-
 <li><a class='existingWikiWord' href='/nlab/show/shuffle'>shuffle</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/tree'>tree</a></li>
 
 <li><a class='existingWikiWord' href='/nlab/show/Young+diagram'>Young diagram</a></li>
 </ul>
@@ -384,14 +390,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on August 26, 2018 at 08:04:49.
+  Last revised on August 29, 2018 at 07:07:33.
   See the <a href="https://ncatlab.org/nlab/history/combinatorics - contents" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/combinatorics+-+contents" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/combinatorics+-+contents" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/combinatorics+-+contents/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/combinatorics+-+contents" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/combinatorics+-+contents" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/combinatorics - contents/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
