--- a/pages/16853.html
+++ b/pages/16853.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/7934/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/7934/#Item_6" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -308,13 +308,15 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='maruku_toc'>
+    <p><h1 id='section_table_of_contents'>Contents</h1>
+<div class='maruku_toc'>
 <ul>
 <li><a href='#idea'>Idea</a></li>
 <li><a href='#related_pages'>Related pages</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
 </div>
+</p>
 
 <h2 id='idea'>Idea</h2>
 
@@ -349,14 +351,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on August 29, 2018 at 19:57:55.
+  Last revised on August 30, 2018 at 00:33:02.
   See the <a href="https://ncatlab.org/nlab/history/plane graph" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/plane+graph" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/plane+graph/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/plane+graph" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/plane+graph" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/plane+graph" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/plane+graph/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/plane+graph" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/plane+graph" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/plane graph/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
